feat: Supabase統合 - 認証とログデータのCRUD操作を実装
- Supabase Authenticationを使用した認証フローを実装
- ログデータのCRUD操作をSupabaseに移行
- 認証状態の監視とセッション管理を実装
- エラーハンドリングとローディング状態を追加
- データベース設計書とセットアップ手順を追加
- データアクセス層（db/*.js）を実装

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="theme-color" content="#000000" />
     <title>電卓</title>
     <meta id="app-description" name="description" content="シンプルな電卓アプリ" />
+    <link rel="preload" href="/fonts/AKACHANa.TTF" as="font" type="font/ttf" crossorigin="anonymous" />
   </head>
   <body>
     <div id="root"></div>
