ヘッダーロゴを「リコログ」に変更、TokuLaboV2フォントを追加、ヘッダーUIをシンプル化、プレミアムプラン特典にクラウド保管を追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover, interactive-widget=resizes-content"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -19,6 +19,7 @@
     <title>電卓</title>
     <meta id="app-description" name="description" content="シンプルな電卓アプリ" />
     <link rel="preload" href="/fonts/AKACHANa.TTF" as="font" type="font/ttf" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/TokuLaboV2.otf" as="font" type="font/otf" crossorigin="anonymous" />
   </head>
   <body>
     <div id="root"></div>
